--- a/index.html
+++ b/index.html
@@ -7,9 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="index.css" />
 <title>React JS</title>
-<style>
-    m10-10-10-10
-</style>
+
 </head>
 
 <body>
@@ -20,28 +18,34 @@
     </div>
     <h6>Hello, I am h6</h6>
 
-    /* Why two script tags ? => one is to get access to pure react which will be used in many other things than browser, second tag is for dom manupulation which is specially for browser, so other than browser platform we can import only first script tag   */
+    <!-- Why two script tags ? => one is to get access to pure react which will be used in many other things than browser,
+    second tag is for dom manupulation which is specially for browser, so other than browser platform we can import only
+    first script tag -->
+
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
     <script src="./App.js"></script>
+
 </body>
 
 </html>
 
 
-/* Q. What is root element has some html content?
-==> When first time html code is printed and after that it is replace by react's render method. 
+<!-- Q. What is root element has some html content?
+==> When first time html code is printed and after that it is replace by react's render method.
 In this code '<h3>I am H3</h3>' will be replaced by rendor method of app.js
 
 Q. What is Emmet?
-==> Emmet is a plugin that helps web developers write HTML and CSS code faster. It works by converting simple abbreviations into code blocks.
+==> Emmet is a plugin that helps web developers write HTML and CSS code faster. It works by converting simple
+abbreviations into code blocks.
 link : https://medium.com/@kartik2406/web-development-with-vs-code-part-1-emmet-6af80f0f630c
 If emmet is not working by defauit then go to extenstions and install emmet
 
 Q. What is async and defer?
 ==> Both are boolean attributes which are used along with script tag to load external scripts efficiently into web page,
 When a web page is loaded, two things happen html parsing, loading of the scripts.
-Loading of the scripts consists of two parts, first is fetching the scripts from network and second is executing the script line by line. 
+Loading of the scripts consists of two parts, first is fetching the scripts from network and second is executing the
+script line by line.
 
 
 
@@ -51,27 +55,12 @@ Loading of the scripts consists of two parts, first is fetching the scripts from
 
 Git Commands :
 1. git init - To initialize git in the project
-2. Default main branch name in git is 'main' and in our project it is 'master', so to change nam from master to main 
-    git branch -M main
-3. 
+2. Default main branch name on github is 'main' and in our project it is 'master', so to change name from master to main
+git branch -M main
+3. To add all files to staging area : git add .
+4. git commit -m "Episode 1" - To commit all staged changes
+5. To configure this local git to remote github - git remote add origin https://github.com/bhavna1210/namaste-react.git
+6. To push add local code to remote - pushing local code to main branch of github - git push -u origin main
 
 
-
-
-
-
-
-
-
-
-
-
-*/
-
-
-
-
-
-
-
-
+-->
